http://localhost:5173/commerce 상품 목록 redis로 상품 목록 가져오는 시간 단축 시키기